--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+csv = "1.3.0"
+log = "0.4.21"
+rust_decimal = "1.35.0"
+rust_decimal_macros = "1.34.2"
+serde = { version = "1.0.198", features = ["derive"] }
