--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+additional_task = []
+
 [dependencies]
 csv = "1.3.0"
 log = "0.4.21"
 rust_decimal = "1.35.0"
 rust_decimal_macros = "1.34.2"
 serde = { version = "1.0.198", features = ["derive"] }
+tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync"] }
